k8/photo-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-api
  labels:
    app: photo-api
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
  selector:
    app: photo-api
