k8/photo-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-api
  annotations:
    kubernetes.io/ingress.global-static-ip-name: static-photo-api-ip
spec:
  defaultBackend:
    service:
      name: photo-api
      port:
        name: http
